--- a/Booking_Service_Management/booking Management.csproj
+++ b/Booking_Service_Management/booking Management.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A30F485A-5B15-40F3-867B-F87335748C3D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BusinessLayer</RootNamespace>
-    <AssemblyName>BusinessLayer</AssemblyName>
+    <ProjectGuid>{245C4E45-0FC8-4F01-ABDE-319660E19084}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>booking_Management</RootNamespace>
+    <AssemblyName>booking Management</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,36 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Booking Commponent\ClsBooking.cs" />
-    <Compile Include="Booking Commponent\ClsStatus.cs" />
-    <Compile Include="ClsAdmins.cs" />
-    <Compile Include="ClsCalendarDate.cs" />
-    <Compile Include="ClsDepartments.cs" />
-    <Compile Include="ClsPayments.cs" />
-    <Compile Include="ClsReviews.cs" />
-    <Compile Include="ClsUsers.cs" />
-    <Compile Include="ClsDateInfo.cs" />
-    <Compile Include="DetailsPeople\ClsContactsInfo.cs" />
-    <Compile Include="DetailsPeople\ClsCountries.cs" />
-    <Compile Include="DetailsPeople\ClsPaymentsInfo.cs" />
-    <Compile Include="DetailsPeople\ClsPerson.cs" />
-    <Compile Include="EnventHandler\NewOfferEventHandler.cs" />
-    <Compile Include="EnventHandler\NoticeNewService.cs" />
-    <Compile Include="Interface\IAdmin.cs" />
-    <Compile Include="Interface\IPerson.cs" />
-    <Compile Include="Interface\IUser.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service Commponent\Clscategories.cs" />
-    <Compile Include="Service Commponent\ClsLocations.cs" />
-    <Compile Include="Service Commponent\ClsPrices.cs" />
-    <Compile Include="Service Commponent\ClsServices.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="B:\C#_project_information\Test&amp;Trainig using C#\Booking\DataLayer\DataLayer.csproj">
-      <Project>{f7ca4ef1-a3bd-4967-a5d3-8c8b8ed14c40}</Project>
-      <Name>DataLayer</Name>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj">
+      <Project>{a30f485a-5b15-40f3-867b-f87335748c3d}</Project>
+      <Name>BusinessLayer</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
