Addtional New Feature On Presentation layer of Console and small Edit in Classes

--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DetailsPeople\ClsPerson.cs" />
     <Compile Include="EnventHandler\NewOfferEventHandler.cs" />
     <Compile Include="EnventHandler\NoticeNewService.cs" />
+    <Compile Include="Extensions\BookingExtension.cs" />
     <Compile Include="Interface\IAdmin.cs" />
     <Compile Include="Interface\IPerson.cs" />
     <Compile Include="Interface\IUser.cs" />
